[package]
name = "bin-stl"
version = "0.1.0"
authors = ["sourlemon207 <jw1756@protonmail.com>"]
edition = "2018"
description = "A basic library for parsing binary stl files"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
lazy_static = "1.4.0"
rand = "0.7.3"
criterion = "0.3.3"

[[bench]]
name = "random"
harness = false
debug = true


[dependencies]
thiserror = "1.0.22"
byteorder = "1.3.4"
